@@ -1,5 +1,7 @@
 *SVN*
 
+* Allow users to declare other namespaces when using the atom feed helpers. #10304 [david.calavera]
+
 * Introduce send_file :x_sendfile => true to send an X-Sendfile response header.  [Jeremy Kemper]
 
 * Fixed ActionView::Helpers::ActiveRecordHelper::form for when protect_from_forgery is used #10739 [jeremyevans]
